--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,6 @@ jobs:
       run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       
     - name: Build the Docker image
-      run: docker build -t cicd-pipeline .
+      run: docker build -t varsubham/cicd-pipeline .
     - name: Push to Dockerhub
       run: docker push varsubham/cicd-pipeline:latest
